[project]
name = ""
version = ""
description = ""
authors = [
    {name = "taeyoon kim", email = "deepthought@postech.ac.kr"},
]
license-expression = "MIT"
dependencies = [
    "biopython>=1.79",
    "pandas>=1.1.5",
    "requests>=2.27.1",
    "tqdm>=4.63.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
