[project]
name = "pubmed-miner"
version = "0.1.0"
description = ""
authors = [
    {name = "taeyoon kim", email = "deepthought@postech.ac.kr"},
]
license = {text = "MIT"}
dependencies = [
    "biopython>=1.79",
    "pandas>=1.1.5",
    "requests>=2.27.1",
    "tqdm>=4.63.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/example/pubmed-miner"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = ["."]
